# retail-vision-ai

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: base_config.yaml
dashboard/: app.py
models/yolo11n_baseline_v1/: args.yaml  results.csv
src/api/: app.py
src/data/: leakage_check.py
src/models/: train.py
src/utils/: config.py
tests/: test_leakage_check.py
